syntax = "proto3";
package cosmonaut.mars.mars;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "mars/params.proto";
import "mars/product.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/cosmonaut/mars/x/mars/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/cosmonaut/mars/mars/params";
  }
  // Queries a Product by id.
	rpc Product(QueryGetProductRequest) returns (QueryGetProductResponse) {
		option (google.api.http).get = "/cosmonaut/mars/mars/product/{id}";
	}

	// Queries a list of Product items.
	rpc ProductAll(QueryAllProductRequest) returns (QueryAllProductResponse) {
		option (google.api.http).get = "/cosmonaut/mars/mars/product";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetProductRequest {
	uint64 id = 1;
}

message QueryGetProductResponse {
	Product Product = 1 [(gogoproto.nullable) = false];
}

message QueryAllProductRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllProductResponse {
	repeated Product Product = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
